# ros2-yaml-interface-generator

./: .gitignore  README.md  generator.py
examples/: .gitignore  config.yaml
examples/src/ros_example/: CMakeLists.txt  package.xml
examples/src/ros_example/config/: config.yaml
examples/src/ros_example/launch/: ros_example_launch.py
examples/src/ros_example/src/: ros_example.cpp
templates/: inner-struct.h.j2  namespace.h.j2  struct.h.j2
